[package]
name = "recursive-list-patch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.11", features = ["derive"] }
hash40 = "1.3.0"
motion-patch = { git = "https://github.com/blu-dev/motion-patch" }
motion_list_rs = "1.5.0"
serde_yaml = "0.9.22"
walkdir = "2.3.3"
